Trying to fix x overflow

--- a/styles.css
+++ b/styles.css
@@ -581,8 +581,11 @@ nav a{
     }
 
     #skills-bg-effect-bottom-right{
-        right: -50%;
+        right: 0%;
+        height: 250px;
+        width: 300px;
     }
+
 }
 
 @media (max-width: 375px) {
